# bigword

./: .clang-format  .clang-tidy  .cmake-format.py  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  main.cpp
.github/workflows/: ci.yml
data/en/: words.txt
data/en/books/: a-tale-of-two-cities.txt
data/es/words/: words.txt
etc/: reformat.sh
lfs/es/: words.txt
scripts/: analyze.sh  reformat.sh
sources/: analyzer.cpp  analyzer.hpp  clock.cpp  clock.hpp  configuration.hpp.in  data.cpp  data.hpp  digest.cpp  digest.hpp  license.cpp  license.hpp  linenumber.hpp  linestream.cpp  linestream.hpp  main.cpp  option.cpp  option.hpp  rules.cpp  rules.hpp  store.cpp  store.hpp  word.cpp  word.hpp
src/: analyzer.cpp  analyzer.hpp  bigword.cpp  clock.cpp  clock.hpp  digest.cpp  digest.hpp  linestream.hpp  main.cpp  option.cpp  option.hpp  rules.cpp  rules.hpp  store.cpp  store.hpp  word.cpp  word.hpp
